POR/RefEdge/src/objects/Community_Invite__c.object
<CustomObject>
    <description>Customer Reference Community (Bound 12)</description>
    <fields>
        <fullName>Account_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Request</label>
        <referenceTo>Reference_Request_Account__c</referenceTo>
        <relationshipLabel>Community Invites</relationshipLabel>
        <relationshipName>Community_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Invites</relationshipLabel>
        <relationshipName>Community_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_No_Thanks_Link__c</fullName>
        <formula>HYPERLINK( $Setup.POR_App_Configuration__c.Refedge_Community_URL__c +&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;RefedgeCommunityParticipate?Id=&apos;+ Id+&apos;&amp;Response=no&apos; ,&apos;No Thanks&apos;, &quot;_blank&quot;)</formula>
        <label>Community No Thanks Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_No__c</fullName>
        <label>Community No</label>
        <summaryFilterItems>
            <field>Community_Invite_Contact__c.Response__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Invite_Contact__c.Community_Invite__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Community_Participate_Deadline__c</fullName>
        <label>Community Participate Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Community_Participate_Details__c</fullName>
        <label>Community Participate Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Participate_Link__c</fullName>
        <formula>HYPERLINK( $Setup.POR_App_Configuration__c.Refedge_Community_URL__c +&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;RefedgeCommunityParticipate&apos;,&apos;Go to the Customer Reference Community&apos;, &quot;_blank&quot;)</formula>
        <label>Community Participate Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Participate_With__c</fullName>
        <label>Community Participate With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Yes_Im_In_Link__c</fullName>
        <formula>HYPERLINK(  $Setup.POR_App_Configuration__c.Refedge_Community_URL__c  +&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;RefedgeCommunityParticipate?Id=&apos;+ Id+&apos;&amp;response=yes&apos;,&quot;Yes, I&apos;m in!&quot;, &quot;_blank&quot;)</formula>
        <label>Community Yes I&apos;m In Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Yes__c</fullName>
        <label>Community Yes</label>
        <summaryFilterItems>
            <field>Community_Invite_Contact__c.Response__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Community_Invite_Contact__c.Community_Invite__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Invites</relationshipLabel>
        <relationshipName>Community_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invite__c</fullName>
        <formula>HYPERLINK( Id, &apos;Details&apos;)</formula>
        <label>Community Invite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Instance_URl__c</fullName>
        <label>Org_Instance_URl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Project_link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;RefRequestProject?Id=&apos;+Reference_Request__c,&apos;Reference Request Link&apos;, &quot;_blank&quot;)</formula>
        <label>Reference Project link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>Community Invites</relationshipLabel>
        <relationshipName>Community_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenceability Type</label>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Community Invites</relationshipLabel>
        <relationshipName>Community_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type_f__c</fullName>
        <formula>Referenceability_Type__r.Name</formula>
        <label>Referenceability Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unspecified_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unspecified Request</label>
        <referenceTo>Unspecified_Request__c</referenceTo>
        <relationshipLabel>Community Invites</relationshipLabel>
        <relationshipName>Community_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Invite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Invite__c</columns>
        <columns>Community_Participate_With__c</columns>
        <columns>Community_Participate_Deadline__c</columns>
        <columns>NAME</columns>
        <columns>Referenceability_Type__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>